--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,24 @@
         android:layout_margin="5dp"
         android:text="@string/into_net" />
 
+    <Button
+        android:id="@+id/btn_goto_print"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/into_print" />
+
+    <Button
+        android:id="@+id/btn_goto_html"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/into_html" />
+
+    <Button
+        android:id="@+id/btn_goto_chart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/into_chart" />
 </LinearLayout>
