--- a/maflibrary/src/main/res/values/color.xml
+++ b/maflibrary/src/main/res/values/color.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 透明 -->
     <color name="trans">#00000000</color>
+    <!-- 半透明 -->
+    <color name="half_trans">#E0FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#666666</color>
@@ -9,4 +12,5 @@
     <color name="green_swipe">#80CEA6</color>
     <!-- 侧滑菜单红色按钮 -->
     <color name="red_swipe">#F64648</color>
+
 </resources>
