--- a/maflibrary/src/main/res/layout/layout_sort_list.xml
+++ b/maflibrary/src/main/res/layout/layout_sort_list.xml
@@ -12,7 +12,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
-            android:divider="@null" />
+            android:divider="@null"
+            android:listSelector="@drawable/selector_recycler_default" />
 
         <TextView
             android:id="@+id/dialog"
