--- a/maflibrary/src/main/res/values/color.xml
+++ b/maflibrary/src/main/res/values/color.xml
@@ -4,6 +4,9 @@
     <color name="trans">#00000000</color>
     <!-- 半透明 -->
     <color name="half_trans">#E0FFFFFF</color>
+    <!-- 半透明 -->
+    <color name="half_trans_black">#E0AEB7C1</color>
+    <color name="province_line_border">#C7C7C7</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#666666</color>
@@ -14,6 +17,11 @@
     <color name="red_swipe">#F64648</color>
     <!-- list选中效果颜色 -->
     <color name="yellow_selector">#FFF9E9</color>
-
+    <!-- 所有界面的公用背景色 -->
+    <color name="gray_view_background">#eff2f5</color>
+    <!-- 基本按钮公用的红色 -->
+    <color name="red_base_button">#F5193D</color>
+    <!-- 基本按钮公用的绿色 -->
+    <color name="green_base_button">#63BA72</color>
 
 </resources>
