二维码生成和扫描功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,5 +65,12 @@
             android:layout_margin="5dp"
             android:text="@string/into_sort" />
 
+        <Button
+            android:id="@+id/btn_goto_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="@string/into_code" />
+
     </LinearLayout>
 </ScrollView>
