--- a/maflibrary/src/main/res/values/styles.xml
+++ b/maflibrary/src/main/res/values/styles.xml
@@ -69,4 +69,25 @@
         <item name="android:windowEnterAnimation">@anim/dialog_show_in</item>
         <item name="android:windowExitAnimation">@anim/dialog_show_out</item>
     </style>
+    <!-- 标题栏图标样式 -->
+    <style name="TitleIconStyle">
+        <item name="android:layout_width">@dimen/title_icon_width</item>
+        <item name="android:layout_height">@dimen/title_icon_height</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+    <!-- 标题栏标题样式-->
+    <style name="TitleTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:text">模块标题</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxEms">10</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/title_size</item>
+    </style>
 </resources>
