--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,5 +72,12 @@
             android:layout_margin="5dp"
             android:text="@string/into_code" />
 
+        <Button
+            android:id="@+id/btn_goto_hot_fix"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="@string/into_hot_fix" />
+
     </LinearLayout>
 </ScrollView>
