加载更多测试

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,80 +9,126 @@
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_goto_toast"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_toast" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_goto_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_image" />
+            <Button
+                android:id="@+id/btn_goto_toast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_toast" />
 
-        <Button
-            android:id="@+id/btn_goto_net"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_net" />
+            <Button
+                android:id="@+id/btn_goto_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_image" />
 
-        <Button
-            android:id="@+id/btn_goto_print"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_print" />
+            <Button
+                android:id="@+id/btn_goto_net"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_net" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_goto_html"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_html" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_goto_chart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_chart" />
+            <Button
+                android:id="@+id/btn_goto_print"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_print" />
 
-        <Button
-            android:id="@+id/btn_goto_collapsing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_collapsing" />
+            <Button
+                android:id="@+id/btn_goto_html"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_html" />
 
-        <Button
-            android:id="@+id/btn_goto_sort"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_sort" />
+            <Button
+                android:id="@+id/btn_goto_chart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_chart" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_goto_code"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_code" />
+            android:orientation="horizontal">
 
-        <Button
-        android:id="@+id/btn_goto_hot_fix"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/into_hot_fix" />
-        <Button
-            android:id="@+id/btn_goto_main_text"
+            <Button
+                android:id="@+id/btn_goto_collapsing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_collapsing" />
+
+            <Button
+                android:id="@+id/btn_goto_sort"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_sort" />
+
+            <Button
+                android:id="@+id/btn_goto_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_code" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="@string/into_main_test" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_goto_hot_fix"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_hot_fix" />
+
+            <Button
+                android:id="@+id/btn_goto_main_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_main_test" />
+
+            <Button
+                android:id="@+id/btn_goto_load"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="@string/into_list_load" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </ScrollView>
