--- a/maflibrary/src/main/res/layout/layout_titlebar_back.xml
+++ b/maflibrary/src/main/res/layout/layout_titlebar_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.maf.views.TitleBarView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_title_background"
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_height"
@@ -16,4 +16,17 @@
         android:id="@+id/text_product_title"
         style="@style/TitleTextStyle"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+    <!-- 显示菜单 -->
+    <ImageView
+        android:id="@+id/image_title_menu"
+        style="@style/TitleIconStyle"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/title_more"
+        android:visibility="gone" />
+    <!-- 右边按钮 -->
+    <TextView
+        android:id="@+id/text_title_right"
+        style="@style/TitleIconRightStyle"
+        android:text="历史号码"
+        android:visibility="gone" />
+</com.maf.views.TitleBarView>
