--- a/maflibrary/src/main/res/values/styles.xml
+++ b/maflibrary/src/main/res/values/styles.xml
@@ -90,4 +90,14 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/title_size</item>
     </style>
+    <!-- 标题右边按钮样式 -->
+    <style name="TitleIconRightStyle">
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
