--- a/app/src/main/res/layout/activity_my_view_test.xml
+++ b/app/src/main/res/layout/activity_my_view_test.xml
@@ -81,4 +81,11 @@
             android:layout_width="80dp"
             android:layout_height="45dp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/text_select_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="选择城市" />
 </LinearLayout>
