--- a/app/src/main/res/layout/activity_my_view_test.xml
+++ b/app/src/main/res/layout/activity_my_view_test.xml
@@ -6,6 +6,11 @@
 
     <include layout="@layout/layout_titlebar_back" />
 
+    <com.maf.views.MySearchBar
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
