--- a/maflibrary/src/main/res/values/styles.xml
+++ b/maflibrary/src/main/res/values/styles.xml
@@ -100,4 +100,8 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="datepicker_style">
+        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:layout_marginRight">6dp</item>
+    </style>
 </resources>
