--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,6 +156,14 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/into_system_test" />
+
+                <Button
+                    android:id="@+id/btn_goto_signal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/into_signal" />
             </LinearLayout>
 
         </LinearLayout>
